# TER

./: .gitignore  CLAUDE.md  README.md  UPDATES.md  plan.md  pyproject.toml
.specify/integrations/: claude.manifest.json  speckit.manifest.json
docs/: TER_GOAL_AND_CHANGES.md  architecture-diagram.md
sample_sessions/: 3331fd66-3745-404c-a3fd-45cbe436f019.jsonl  64948793-bbad-43f2-aaf4-2b1fb115ec69.jsonl  a3b73c37-ddfa-45bd-9b30-5229f26a99a3.jsonl  b1a1450c-b006-40fe-8f9c-f15622a94324.jsonl  ff410fa9-3d7b-4021-897f-45e5883af8f9.jsonl
scripts/: sanitize_sessions.py
src/ter_calculator/: __init__.py  acceleration.py  adaptive_budget.py  analyze_pipeline.py  classifier.py  cli.py  compare.py  compute.py  config_parse.py  cost_model.py  economics.py  embedding_cache.py  feedback.py  formatter.py  input_analysis.py  intent.py  intent_extraction.py  loader.py  models.py  overthinking.py  plugins.py  real_time.py  session_report.py  token_counting.py  validation.py  waste.py  waste_detectors.py
tests/fixtures/: sample_session.jsonl
tests/integration/: test_cli.py
tests/unit/: test_classifier.py  test_compute.py  test_economics.py  test_formatter.py  test_input_analysis.py  test_intent.py  test_loader.py  test_session_report.py  test_waste.py
